# playauth

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
app/: __init__.py  db.py  exceptions.py  fixturedata.py  schemas.py  utils.py
app/auth/: __init__.py  dbmod.py  dbmods.py  models.py  schema.py  schemas.py
app/routes/: __init__.py  authrouter.py  devrouter.py
app/settings/: __init__.py  base.py  development.py  local.py  production.py
fixtures/: __init__.py  actions.py  data.py
migrations/models/: 0_20230501154650_init.py  0_20230501224451_init.py  0_20230506131726_init.py  0_20230506185950_init.py  0_20230506192232_init.py  0_20230506212231_init.py  0_20230506235034_init.py  0_20230514170611_init.py  0_20230514205527_init.py  0_20230514212504_init.py  0_20230713160014_init.py  1_20230501230004_update.py  1_20230502130643_None.py  1_20230506131820_drop_token_model.py  1_20230514201721_update.py  2_20230501230107_update.py  2_20230502144347_update.py  2_20230514201806_update.py  3_20230514201838_update.py
tests/: conftest.py  test_auth.py  test_dev.py
