[tool.poetry]
name = "playauth"
version = "0.1.0"
description = ""
authors = ["enchance <enchance@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
uvicorn = "^0.22.0"
icecream = "^2.1.3"
ujson = "^5.7.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
fastapi-users-tortoise = "^0.2.0"
aerich = "^0.7.1"
python-decouple = "^3.8"
limeutils = "^0.2.12"
fastapi-users = "^11.0.0"
pytest-asyncio = "^0.21.0"
google-auth = "^2.18.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-sugar = "^0.9.7"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
factory-boy = "^3.2.1"
freezegun = "^1.2.2"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
